--- a/ui/forum/src/app/modules/question/question-list/question-card/question-card.component.html
+++ b/ui/forum/src/app/modules/question/question-list/question-card/question-card.component.html
@@ -1,4 +1,5 @@
 <div class="flex flex-col border px-6 py-3 bg-gray-50 rounded-md cursor-pointer">
-    <h1 class="text-xl font-semibold leading-6">This is the Question Question Question Question Question  ?</h1>
-    <h3 class="text-xs text-gray-600 mt-2">Asked by @username</h3>
+    <h1 class="text-xl font-semibold leading-6">{{ question.title }}</h1>
+    <h4 class="">{{ question.description }}</h4>
+    <h5 class="text-gray-600">Asked by @{{ question.username }}</h5>
 </div>
